fix scrollbar

--- a/src/styles/locomotive-scroll.css
+++ b/src/styles/locomotive-scroll.css
@@ -1,19 +1,8 @@
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
-
-
-
-  html.has-scroll-smooth {
-    overflow: hidden;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;  
-  inset: 0;
+html.has-scroll-smooth {
   backface-visibility: hidden;
 	transform: translateZ(0);
-}
-
+  overflow: hidden; }
 
 html.has-scroll-dragging {
   -webkit-user-select: none;
@@ -25,7 +14,6 @@ html.has-scroll-dragging {
   overflow: hidden; }
 
 .has-scroll-smooth [data-scroll-container] {
-  
   min-height: 100vh; }
 
 [data-scroll-direction="horizontal"] [data-scroll-container] {
@@ -36,7 +24,6 @@ html.has-scroll-dragging {
 [data-scroll-direction="horizontal"] [data-scroll-section] {
   display: inline-block;
   vertical-align: top;
-  will-change: transform;
   white-space: nowrap;
   height: 100%; }
 
